# pinggen-lang

./: CMakeLists.txt  README.md  install-puff.ps1  puff.cmd
docs/: book.md  reference.md  release-checklist.md
examples/cli_workspace/: pinggen.toml
examples/codegen_con_single/: pinggen.toml
examples/file_process/: input.txt  pinggen.toml
examples/hello/: pinggen.toml
examples/hierarchical_modules/: pinggen.toml
examples/invalid_array_assign_immutable/: pinggen.toml
examples/invalid_array_index_type/: pinggen.toml
examples/invalid_array_mixed_literal/: pinggen.toml
examples/invalid_array_operator/: pinggen.toml
examples/invalid_array_size_mismatch/: pinggen.toml
examples/invalid_bool_assign/: pinggen.toml
examples/invalid_break_outside_loop/: pinggen.toml
examples/invalid_con_empty/: pinggen.toml
examples/invalid_con_mixed_void/: pinggen.toml
examples/invalid_con_mut_method/: pinggen.toml
examples/invalid_con_nested/: pinggen.toml
examples/invalid_con_non_call/: pinggen.toml
examples/invalid_con_unsafe_call/: pinggen.toml
examples/invalid_continue_outside_loop/: pinggen.toml
examples/invalid_dependency_both_sources/: pinggen.toml
examples/invalid_dependency_cycle_app/: pinggen.toml
examples/invalid_dependency_cycle_dep/: pinggen.toml
examples/invalid_dependency_cycle_lib/: pinggen.toml
examples/invalid_dependency_cycle_root/: pinggen.toml
examples/invalid_dependency_duplicate_name/: pinggen.toml
examples/invalid_dependency_import_root/: pinggen.toml
examples/invalid_dependency_missing_config/: pinggen.toml
examples/invalid_dependency_missing_config_dep/: README.txt
examples/invalid_dependency_missing_registry/: pinggen.toml
examples/invalid_dependency_neither_source/: pinggen.toml
examples/invalid_dependency_root_import/: pinggen.toml
examples/invalid_dependency_std_name/: pinggen.toml
examples/invalid_duplicate_dependency_name/: pinggen.toml
examples/invalid_duplicate_method/: pinggen.toml
examples/invalid_duplicate_param/: pinggen.toml
examples/invalid_duplicate_target_name/: pinggen.toml
examples/invalid_enum_compare_mismatch/: pinggen.toml
examples/invalid_enum_duplicate/: pinggen.toml
examples/invalid_enum_duplicate_variant/: pinggen.toml
examples/invalid_enum_impl/: pinggen.toml
examples/invalid_enum_operator/: pinggen.toml
examples/invalid_enum_unknown_type/: pinggen.toml
examples/invalid_enum_unknown_variant/: pinggen.toml
examples/invalid_env_get_arity/: pinggen.toml
examples/invalid_env_get_missing_import/: pinggen.toml
examples/invalid_env_get_type/: pinggen.toml
examples/invalid_env_result_without_import/: pinggen.toml
examples/invalid_field_assign_immutable/: pinggen.toml
examples/invalid_for_assign_loop_var/: pinggen.toml
examples/invalid_for_bound_type/: pinggen.toml
examples/invalid_for_missing_in/: pinggen.toml
examples/invalid_for_missing_return/: pinggen.toml
examples/invalid_for_scope/: pinggen.toml
examples/invalid_fs_create_dir_arity/: pinggen.toml
examples/invalid_fs_create_dir_missing_import/: pinggen.toml
examples/invalid_fs_create_dir_type/: pinggen.toml
examples/invalid_fs_cwd_arity/: pinggen.toml
examples/invalid_fs_cwd_missing_import/: pinggen.toml
examples/invalid_fs_exists_arity/: pinggen.toml
examples/invalid_fs_exists_missing_import/: pinggen.toml
examples/invalid_fs_exists_type/: pinggen.toml
examples/invalid_fs_read_arity/: pinggen.toml
examples/invalid_fs_read_missing_import/: pinggen.toml
examples/invalid_fs_read_type/: pinggen.toml
examples/invalid_fs_remove_arity/: pinggen.toml
examples/invalid_fs_remove_missing_import/: pinggen.toml
examples/invalid_fs_remove_type/: pinggen.toml
examples/invalid_fs_result_without_import/: pinggen.toml
examples/invalid_fs_write_arity/: pinggen.toml
examples/invalid_fs_write_content_type/: pinggen.toml
examples/invalid_fs_write_missing_import/: pinggen.toml
examples/invalid_fs_write_path_type/: pinggen.toml
examples/invalid_fs_write_result_without_import/: pinggen.toml
examples/invalid_hierarchical_duplicate_symbol/: pinggen.toml
examples/invalid_hierarchical_missing_module/: pinggen.toml
examples/invalid_hierarchical_module_cycle/: pinggen.toml
examples/invalid_if_condition/: pinggen.toml
examples/invalid_logical_operands/: pinggen.toml
examples/invalid_match_duplicate_arm/: pinggen.toml
examples/invalid_match_missing_variant/: pinggen.toml
examples/invalid_match_non_block_arm/: pinggen.toml
examples/invalid_match_non_enum_subject/: pinggen.toml
examples/invalid_match_unknown_variant/: pinggen.toml
examples/invalid_match_wrong_enum_arm/: pinggen.toml
examples/invalid_method_on_non_struct/: pinggen.toml
examples/invalid_missing_module/: pinggen.toml
examples/invalid_missing_return/: pinggen.toml
examples/invalid_missing_self/: pinggen.toml
examples/invalid_module_cycle/: pinggen.toml
examples/invalid_module_import_braces/: pinggen.toml
examples/invalid_modulo_operands/: pinggen.toml
examples/invalid_mut_method_field_receiver/: pinggen.toml
examples/invalid_mut_method_immutable/: pinggen.toml
examples/invalid_mut_method_temporary/: pinggen.toml
examples/invalid_mut_self_position/: pinggen.toml
examples/invalid_payload_enum_call_plain_variant/: pinggen.toml
examples/invalid_payload_enum_equality/: pinggen.toml
examples/invalid_payload_enum_missing_argument/: pinggen.toml
examples/invalid_payload_enum_wrong_arity/: pinggen.toml
examples/invalid_payload_enum_wrong_type/: pinggen.toml
examples/invalid_payload_match_binding/: pinggen.toml
examples/invalid_payload_match_missing_binding/: pinggen.toml
examples/invalid_plain_match_binding/: pinggen.toml
examples/invalid_project_bad_entry/: pinggen.toml
examples/invalid_project_missing_entry/: pinggen.toml
examples/multi_target/: pinggen.toml
runtime/: pinggen_runtime.cpp
src/: dependency_resolver.cpp  diagnostics.cpp  formatter.cpp  frontend.cpp  lexer.cpp  llvm_ir.cpp  lsp.cpp  main.cpp  parser.cpp  project.cpp  sema.cpp  token.cpp
tools/: render_book_pdf.py
(+243 files in other folders)
